updated cors for test